Changed .container from height to min-height to prevent top and bottom cutoff

--- a/style.css
+++ b/style.css
@@ -45,9 +45,7 @@ main {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-top: 20px; 
-    margin-bottom: 20px;
-    height: 100vh;
+    min-height: 100vh;
 }
 
 /* Header */
@@ -121,7 +119,7 @@ header .linkedIn-btn {
 
 main,
 footer {
-    padding: 1em 2em;
+    padding: 1em 2em 0;
 }
 
 main {  
@@ -148,7 +146,7 @@ main p {
 
 footer {
     height: 64px;
-    margin: -0.7em auto 2em;
+    margin: 0 auto;
     border-radius: 0 0 20px 20px;
     background-color: #161619;
 }
